// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gridDefinitionColumns renders 0 1`] = `
Array [
  .c0 {
  grid-definition-columns: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`gridDefinitionColumns renders function 1`] = `
Array [
  .c0 {
  grid-definition-columns: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: has;
}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: has;
}

<div
    className="c0"
  />,
]
`;

exports[`gridDefinitionColumns renders invalid theme path 1`] = `
Array [
  .c0 {
  grid-definition-columns: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`gridDefinitionColumns renders negative number 1`] = `
Array [
  .c0 {
  grid-definition-columns: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridDefinitionColumns renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  grid-definition-columns: July;
}

@media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-definition-columns: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: July;
}

@media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-definition-columns: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-definition-columns: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-definition-columns: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridDefinitionColumns renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-definition-columns: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-definition-columns: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-definition-columns: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-definition-columns: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-definition-columns: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridDefinitionColumns renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  grid-definition-columns: July;
}

@media May {
  .c0 {
    grid-definition-columns: August;
  }
}

@media April {
  .c0 {
    grid-definition-columns: September;
  }
}

@media January {
  .c0 {
    grid-definition-columns: November;
  }
}

@media April {
  .c0 {
    grid-definition-columns: August;
  }
}

@media June {
  .c0 {
    grid-definition-columns: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: July;
}

@media May {
  .c0 {
    grid-definition-columns: August;
  }
}

@media April {
  .c0 {
    grid-definition-columns: September;
  }
}

@media January {
  .c0 {
    grid-definition-columns: November;
  }
}

@media April {
  .c0 {
    grid-definition-columns: August;
  }
}

@media June {
  .c0 {
    grid-definition-columns: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-definition-columns: November;
  }
}

@media April {
  .c0 {
    grid-definition-columns: January;
  }
}

@media January {
  .c0 {
    grid-definition-columns: December;
  }
}

@media April {
  .c0 {
    grid-definition-columns: April;
  }
}

@media June {
  .c0 {
    grid-definition-columns: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-definition-columns: November;
  }
}

@media April {
  .c0 {
    grid-definition-columns: January;
  }
}

@media January {
  .c0 {
    grid-definition-columns: December;
  }
}

@media April {
  .c0 {
    grid-definition-columns: April;
  }
}

@media June {
  .c0 {
    grid-definition-columns: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridDefinitionColumns renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    grid-definition-columns: July;
  }
}

@media April {
  .c0 {
    grid-definition-columns: August;
  }
}

@media January {
  .c0 {
    grid-definition-columns: September;
  }
}

@media April {
  .c0 {
    grid-definition-columns: November;
  }
}

@media June {
  .c0 {
    grid-definition-columns: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    grid-definition-columns: July;
  }
}

@media April {
  .c0 {
    grid-definition-columns: August;
  }
}

@media January {
  .c0 {
    grid-definition-columns: September;
  }
}

@media April {
  .c0 {
    grid-definition-columns: November;
  }
}

@media June {
  .c0 {
    grid-definition-columns: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-definition-columns: January;
  }
}

@media April {
  .c0 {
    grid-definition-columns: December;
  }
}

@media January {
  .c0 {
    grid-definition-columns: April;
  }
}

@media April {
  .c0 {
    grid-definition-columns: May;
  }
}

@media June {
  .c0 {
    grid-definition-columns: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-definition-columns: January;
  }
}

@media April {
  .c0 {
    grid-definition-columns: December;
  }
}

@media January {
  .c0 {
    grid-definition-columns: April;
  }
}

@media April {
  .c0 {
    grid-definition-columns: May;
  }
}

@media June {
  .c0 {
    grid-definition-columns: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridDefinitionColumns renders postitive number 1`] = `
Array [
  .c0 {
  grid-definition-columns: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridDefinitionColumns renders string 1`] = `
Array [
  .c0 {
  grid-definition-columns: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: June;
}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: June;
}

<div
    className="c0"
  />,
]
`;

exports[`gridDefinitionColumns renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`gridDefinitionColumns renders valid theme path 1`] = `
Array [
  .c0 {
  grid-definition-columns: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-definition-columns: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
